--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "axum-forum"
 version = "0.1.0"
 edition = "2021"
 
+[lints.clippy]
+unwrap_used = "deny"
+
 [dependencies]
 axum = { version = "0.8.1" }
 chrono = { version = "0.4.39", features = ["serde"] }
