--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ rusqlite = { version = "0.33.0", features = ["chrono", "bundled"] }
 serde = { version = "1.0.217", features = ["derive"] }
 thiserror = { version = "2.0.11" }
 tokio = { version = "1.43.0", features = ["full"] }
+tracing = { version = "0.1" }
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
