--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ unwrap_used = "deny"
 axum = { version = "0.8.1" }
 chrono = { version = "0.4.39", features = ["serde"] }
 config-manager = { version = "0.4.5" }
+css-minify = "0.5.2"
 grass = { version = "0.13.4", features = ["macro"] }
 minijinja = { version = "2.7.0" }
 rusqlite = { version = "0.33.0", features = ["chrono", "bundled"] }
